--- a/rag-pdf.ipynb
+++ b/rag-pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martin/miniconda3/envs/rag/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/bigdata/miniconda3/envs/rag/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "# Configurar el retriever\n",
     "retriever = vector_store.as_retriever()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +114,7 @@
        "10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +136,7 @@
        "Document(metadata={'page': 21, 'source': 'documents/MartinScorsese.pdf'}, page_content='500. Paris, 1996.\\nMarino, Giuseppe Cario. Historiade laMafia. Barcelona: Ediciones B, 2002.\\nMillas, Jorge. LaViolenciay sus Máscaras. Santiago: Aconcagua, 1976.\\nRuiz, Raúl. PoéticaDel Cine. Santiago: Sudamericana, 2000.\\nScorsese, Martínyotros. APersonalJourneyWithMartínScorseseThroughAmericanMovie.\\nLondon: Akal, 1997.\\nScorsese, Martínyotros. Conversaciones con Scorsese. Madrid: Plot, 1987.')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"La respuesta a la pregunta es:\\n\\n* Película favorita de Juan: 'Mulholland Drive'\\n* Color favorito de Juan: Amarillo\\n* Color que Juan odia: Verde\""
+       "'La respuesta a la pregunta es:\\n\\n- Película favorita: Mulholland Drive\\n- Color favorito: Amarillo'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Según el contexto proporcionado, Martin Scorsese es un cineasta conocido. También se mencionan varios libros y artículos relacionados con él, como \"APersonalJourneyWithMartínScorseseThroughAmericanMovie\" y \"Conversaciones con Scorsese\". Además, se hace referencia a películas de él, como \"Mean Streets\", que parece ser una película en la que también actúa.'"
+       "'Según el texto proporcionado, Martin Scorsese es un cineasta conocido. Se menciona que su presencia como actor debería pasar inadvertida debido a su fama y manejo mediático, lo que sugiere que no es un actor destacado por su actuación en películas. Sin embargo, su trabajo como director de cine es el que se destaca en el texto.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La violencia es un tema central en las películas de Martin Scorsese, y parece que es una forma de expresión creativa y de exploración del ser humano. Según el texto, la violencia se presenta en diferentes formas en sus obras, como en \"Mean Streets\", donde se muestra como una parte inherente a la vida, y también en películas como \"Casino\" (1995), donde es un tema físico y psicológico.\\n\\nEn general, parece que Scorsese no aborda la violencia de manera didáctica o moralizante, sino que la presenta como una forma de expresión artística y de exploración del ser humano. La violencia también se relaciona con el sentido trágico de la vida y se presenta de manera sutil y elíptica.\\n\\nEn resumen, la violencia en las películas de Scorsese parece ser un tema complejo y multifacético que se relaciona con la expresión creativa, la exploración del ser humano y el sentido trágico de la vida.'"
+       "'La violencia es un tema central en las películas de Martin Scorsese, según el texto proporcionado. Se menciona que la violencia es una forma de vida en muchas de sus obras, incluyendo \"Mean Streets\", y que se presenta como un aspecto inherente al hombre y a la sociedad. También se menciona que la violencia es una constante opresión del sentido aparentoso de la realidad en su cine, especialmente en películas como \"Casino\" (1995). Además, se destaca que la violencia en Scorsese no es solo física, sino también psicológica y emocional.\\n\\nEn general, parece que la violencia en las películas de Martin Scorsese es un tema complejo y multifacético que aborda temas como la tragedia, el drama y la exploración del ser humano.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'En el documento, hay información sobre la película \"Goodfellas\" dirigida por Martin Scorsese. Se mencionan varias cosas:\\n\\n* La película es una evocación de la elegancia del gángster en la tradición del cine de género.\\n* El protagonista, Charlie, convoca a un grupo que incluye a Michael y otros personajes.\\n* La fiesta está determinada por ambigüedades perturbadoras.\\n* Se menciona la relación entre Charlie y su padre, quien es un gángster y le enseña \"enseñanzas de Paul Cicero\".\\n* También se habla sobre la autodestrucción de Henry Hill, el protagonista principal del film, y Ginger McKercher.\\n* La película explora la moralidad gangsteril y cómo los personajes están atrapados en su mundo criminal.\\n\\nAdemás, se mencionan otros films de Martin Scorsese, como \"Casino\" y \"Raging Bully\", y cómo las estructuras narrativas de estas películas están relacionadas con \"Goodfellas\".'"
+       "'En el documento, hay varias secciones que tratan sobre Goodfellas:\\n\\n1. La primera sección (página 18) menciona la evocación de la \"ostentosa elegancia del gángster\" en el cine de género y cómo la película Goodfellas convoca a un grupo de personajes, incluyendo a Michael, en un mundo determinado por ambigüedades.\\n2. La segunda sección (páginas 12) habla sobre las enseñanzas de Paul Cicero, el padrino de Goodfellas, y su autodestrucción, así como la moral gangsteril presente en el film y su relación con la tradición del cine de género.\\n3. La tercera sección (página 4) menciona la importancia de seguir la trayectoria criminal de un padre en la familia Corleone y cómo esta familia es una organización dentro del Estado, que ha convertido el crimen en un modo de vida.\\n4. La última sección (página 12) analiza la estructura del relato y la eficacia de Scorsese en la planificación y montaje del film, destacando la circularidad entre las cuatro escenas.\\n\\nEn resumen, el documento ofrece una visión general de la película Goodfellas, abordando temas como su representación del gángster, su moralidad y su estructura narrativa.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'El documento \"La violencia como opción creativa en la obra de Martin Scorsese\" analiza la violencia como un elemento fundamental en la cinematografía de Martin Scorsese. El autor argumenta que la violencia es una forma de expresión creativa y poética, que se puede encontrar en muchos de sus filmes.\\n\\nSegún el documento, Scorsese define la violencia como \"esencial\" en su obra y lo utiliza para explorar temas morales y filosóficos. El autor menciona específicamente cómo Scorsese aborda la violencia en películas como \"Mean Streets\" y \"Taxi Driver\", destacando la importancia de las relaciones con otros autores, como Fellini.\\n\\nEl documento también destaca la presencia de un fatalismo siciliano en la obra de Scorsese, que se refleja en su uso de la violencia para expresar un sentido de desesperanza y moralidad. Sin embargo, el autor sostiene que Scorsese ofrece una consecuencia moral a la violencia, explorándola de manera poética y creativa.\\n\\nEn general, el documento presenta una visión compleja y matizada de la violencia en la obra de Martin Scorsese, destacando su importancia como elemento creativo y su capacidad para expresar temas profundos y universales.'"
+       "'El documento \"La violencia como opción creativa en la obra de Martin Scorsese\" parece ser un análisis filosófico y cinematográfico sobre la figura del director Martin Scorsese. A continuación, se presentan los puntos clave resumidos del texto:\\n\\n1. **Violencia como opción creativa**: El documento establece que la violencia es una fuerza fundamental en la obra de Scorsese, que utiliza para expresar su visión y crear un mundo cinematográfico único.\\n2. **Análisis de algunas películas**: A través de análisis de algunas de sus películas, como \"Mean Streets\" (1973) y \"El Padrino\" (1972), se demuestra cómo Scorsese utiliza la violencia para explorar temas como la fe, el fatalismo y la moralidad.\\n3. **La poesía de la violencia**: El texto afirma que la violencia en Scorsese es una forma de poesía, una forma de expresión que se inscribe en un lenguaje visual y narrativo único.\\n4. **Consecuencia moral a la violencia**: Aunque admite que la violencia es una fuerza destructiva, el documento sostiene que Scorsese ofrece una consecuencia moral a la violencia, explorándola de manera creativa para hacer de ella un soporte artístico.\\n5. **Influencias y referencias culturales**: El texto menciona la influencia del cine italiano y de Federico Fellini en la obra de Scorsese, así como sus propias referencias a la Biblia, específicamente a San Pablo.\\n\\nEn resumen, el documento \"La violencia como opción creativa en la obra de Martin Scorsese\" es un análisis filosófico y cinematográfico que explora la figura del director Scorsese y su uso de la violencia en sus películas para expresar su visión artística y explorar temas morales y existenciales.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La mafia parece ser un tema central en las películas de Scorsese, como se desprende del contexto proporcionado. La mafia es descrita como una familia perversa y agrega que \"No hay escapatoria\" para un miembro de la familia Corleone. También se menciona que la mafia está dentro del Estado y que su directora convirtió en un modo de vida.\\n\\nAdemás, se destaca la importancia de la mafia en sus películas al ser descrita como una organización fuerte y poderosa, con prioridades en la familia y la iglesia. También se menciona que la mafia es capaz de ser a la vez manipuladora y brutal, lo que sugiere una complejidad en su naturaleza.\\n\\nEn resumen, la relación de la mafia en las películas de Scorsese parece ser fundamental, siendo descrita como una parte integral del tejido social y una forma de vida para muchos personajes.'"
+       "'La mafia es un tema central en las películas de Martin Scorsese, y su relación con él se puede resumir en que la organización criminal se presenta como una parte integral del Estado, más allá de su naturaleza ilegal. Según la cita incluida en el texto, Scorsese afirma que \"la mafia es la más fuerte\" y que \"Primero está la familia, es decir, la tuya más la mafia, luego la iglesia\". Esto sugiere que la mafia no solo es una estructura social pervertida, sino también un elemento fundamental de la sociedad italiana.\\n\\nAdemás, la película de Scorsese parece explorar la complejidad de la mafia, mostrando su lado oscuro y brutal, pero también su faceta más humana y protectora. La cita del número 78 menciona que los gángsters pueden ser \"manipuladores y muy brutos\" al mismo tiempo, lo que sugiere una dimensión psicológica de la mafia.\\n\\nEn general, la relación de la mafia con las películas de Scorsese se centra en su representación como una parte integral de la sociedad italiana, con sus propias normas y estructuras sociales, y no solo como un grupo criminal perjudicial. Esto es reflejado en su interés por explorar los aspectos más profundos y complejos de la mafia, más allá de la simple violencia y el crimen.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
