documentation in progress

--- a/rag-web.ipynb
+++ b/rag-web.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importamos librerías necesarias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extraemos el contenido de la página web y la dividimos en chunks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -14,9 +45,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
     "\n",
     "# Extrae el texto de la página web y divide cada línea en un fragmento de texto\n",
@@ -53,12 +81,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instanciamos los embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")"
    ]
@@ -77,7 +111,6 @@
     }
    ],
    "source": [
-    "from langchain_chroma import Chroma\n",
     "\n",
     "\n",
     "vector_store = Chroma.from_texts(\n",
@@ -94,7 +127,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_chroma import Chroma\n",
     "\n",
     "vector_store = Chroma(\n",
     "    collection_name=\"book_review2\",\n",
@@ -163,10 +195,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain_ollama.chat_models import ChatOllama\n",
-    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
     "\n",
     "# Prompt\n",
     "template = \"\"\"Answer the question based only on the following context:\n",
