--- a/RAG-pdf.ipynb
+++ b/RAG-pdf.ipynb
@@ -1,13 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RAG-PDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este cuaderno procesa documentos PDF, extrayendo y dividiendo su contenido en fragmentos de texto. Luego, los almacena en una base de datos de vectores para facilitar la búsqueda. Utilizando el modelo **Llama 3.2**, el sistema responde a preguntas sobre los PDFs, generando respuestas precisas basadas en la información almacenada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa las librerías necesarias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga los pdfs, extraemos los textos y los dividimos"
    ]
   },
   {
@@ -24,9 +58,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "pdf_files = [\"documents/pruebaLLM.pdf\",\"documents/pruebaLLM2.pdf\", \"documents/MartinScorsese.pdf\"]  # Agrega la lista de archivos PDF\n",
+    "pdf_files = [\"documents/pruebaLLM.pdf\",\"documents/pruebaLLM2.pdf\", \"documents/MartinScorsese.pdf\"]  \n",
     "\n",
     "all_documents = []\n",
     "\n",
@@ -41,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configura un modelo de Hugging Face para generar embeddings de texto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -49,15 +88,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bigdata/miniconda3/envs/rag/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/martin/miniconda3/envs/rag/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear un vector store de Chroma usando los documentos y el modelo de embeddings\n"
    ]
   },
   {
@@ -74,9 +119,6 @@
     }
    ],
    "source": [
-    "from langchain_chroma import Chroma\n",
-    "\n",
-    "# Crear un vector store de Chroma usando los documentos y el modelo de embeddings\n",
     "vector_store = Chroma.from_documents(\n",
     "    documents=all_documents,\n",
     "    collection_name=\"pdfs_2\",\n",
@@ -87,17 +129,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utiliza una función de embeddings para representar los datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_chroma import Chroma\n",
-    "\n",
     "vector_store = Chroma(\n",
     "    collection_name=\"pdfs_2\",\n",
     "    embedding_function=embeddings,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convierte el vector store en un retriever  para realizar consultas basadas en similitud de texto"
    ]
   },
   {
@@ -106,15 +160,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Configurar el retriever\n",
     "retriever = vector_store.as_retriever()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pregunta de ejemplo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos los textos más relacionados a la pregunta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -142,7 +207,16 @@
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'page': 21, 'source': 'documents/MartinScorsese.pdf'}, page_content='500. Paris, 1996.\\nMarino, Giuseppe Cario. Historiade laMafia. Barcelona: Ediciones B, 2002.\\nMillas, Jorge. LaViolenciay sus Máscaras. Santiago: Aconcagua, 1976.\\nRuiz, Raúl. PoéticaDel Cine. Santiago: Sudamericana, 2000.\\nScorsese, Martínyotros. APersonalJourneyWithMartínScorseseThroughAmericanMovie.\\nLondon: Akal, 1997.\\nScorsese, Martínyotros. Conversaciones con Scorsese. Madrid: Plot, 1987.')"
+       "[Document(metadata={'page': 21, 'source': 'documents/MartinScorsese.pdf'}, page_content='500. Paris, 1996.\\nMarino, Giuseppe Cario. Historiade laMafia. Barcelona: Ediciones B, 2002.\\nMillas, Jorge. LaViolenciay sus Máscaras. Santiago: Aconcagua, 1976.\\nRuiz, Raúl. PoéticaDel Cine. Santiago: Sudamericana, 2000.\\nScorsese, Martínyotros. APersonalJourneyWithMartínScorseseThroughAmericanMovie.\\nLondon: Akal, 1997.\\nScorsese, Martínyotros. Conversaciones con Scorsese. Madrid: Plot, 1987.'),\n",
+       " Document(metadata={'page': 20, 'source': 'documents/MartinScorsese.pdf'}, page_content='Michael, amenazando con delirantes castigos\\ncontraJohnyBoy, antelamiradacomplacientey\\nlaenigmáticasonrisade Shorty. Sibienes cierto,\\nparael estrenodeMeanStreets, Scorsesenoera\\nun cineasta conocido, su presencia como actor\\ndebería pasar inadvertida. Hoy, dada su fama\\ny manejo mediático, la solución que entrega\\nno deja de ser sorprendente. La filmación de'),\n",
+       " Document(metadata={'page': 8, 'source': 'documents/MartinScorsese.pdf'}, page_content='donde la subjetividadestásignadaenelplanodeunarealidadnueva. Es eltoquedeFellinique\\ndenotaligerezayseguridada lavez, dice Scorsese. Es laverdadautobiográfica deFellini, que\\nse asociaa lamediatización de los recuerdos de Scorsese en Mean Streets.\\nScorsese valora, además, los momentos finales, cuya excelencia en los cortes y'),\n",
+       " Document(metadata={'page': 10, 'source': 'documents/MartinScorsese.pdf'}, page_content='la presentación de los créditos, que nos remite aCassavetes y al cine independiente.\\nComo se haexpuesto, Scorsese manifiesta unaprofundaadhesiónaJohnCassavetes, a\\nquien considerauno de susmaestros. De Cassavetes, cita el film Shadows (1959), filmado en\\n16mm, con una significativa carencia de recursos económicos. Pero logrando resultados tan'),\n",
+       " Document(metadata={'page': 11, 'source': 'documents/MartinScorsese.pdf'}, page_content='directa con la muerte, con la violencia. Con ese fatalismo siciliano que tiene su respuesta en\\nla fe. Como el agua que limpia la sangre, signo del pecado en Charlie. Scorsese, ofrece una\\nconsecuencia moral a laviolencia, para explorarlao poetizarla. Para hacer de ellaun soporte\\ncreativo en el hacer cinematográfico. Su propia respuesta está en San Pablo, estudiado y'),\n",
+       " Document(metadata={'page': 13, 'source': 'documents/MartinScorsese.pdf'}, page_content='estáenlaprofunday, porende, grotescaborracherade unborrachoanónimo, interpretadopor\\nDavidCarradine, quienhabíainterpretado aBig,\\n\"Billie\"\\nShelley, unactivo lídersindicalista,\\nliteralmente crucificado, en BoxearBertha, el film precedente a Mean Streets. Queda clara\\nla intención de Scorsese por establecer una distanciatan acentuada entre un rol y otro. Es el'),\n",
+       " Document(metadata={'page': 12, 'source': 'documents/MartinScorsese.pdf'}, page_content='Teresa, abren y cierran el film. Solución que, desde otra perspectiva, se involucra con I\\nVitelloni. Tal circularidad aparece, además, en Casino y enRaging Bully, en ciertamedida,\\nen Goodfellas.\\nLa disposición de las cuatro escenas delata la eficacia de Scorsese en la estructura del\\nrelato, montaje, planificaciónymovimientos de cámara. De esa manera, el conjunto se inicia'),\n",
+       " Document(metadata={'page': 10, 'source': 'documents/MartinScorsese.pdf'}, page_content='de la industria de Hollywood. Su condición es más profunda y compleja.\\nPara Scorsese, elmotivocentraldelcineindependiente esel de lavoluntad, lafortaleza,\\n74 AISTHESIS\\nN\"\\n37, 2004.'),\n",
+       " Document(metadata={'page': 19, 'source': 'documents/MartinScorsese.pdf'}, page_content='de matices y sutilezas logradas por Keitel y de Niro. Son el complemento encontrado por\\nScorsese paratrabajar con un margen de improvisación. Pararesolver escenas en donde las\\npalabraspoco dicen, porqueprovienendepersonajes quehablanmuchoyhacenpoco.\\nEfectivamente, los disparos de Johny en la azotea no son el resultado de una mente'),\n",
+       " Document(metadata={'page': 6, 'source': 'documents/MartinScorsese.pdf'}, page_content='Scorsese comprende la consolidación\\nde lamúsicarockyel entramado queéstatiene\\ncondiversas expresiones artísticas. Entiende la\\népoca de John Cage y lo que eso significa, no sólo para la música, sino las artes visuales, la\\nliteratura, el teatro. Sabe de la nueva marginalidad, en la narrativa de William S. Burroughs\\ny la obra Charles Bukowsky. Como de la conjunción Duchamp-Jones-Warhol. Se integra')]"
       ]
      },
      "execution_count": 9,
@@ -151,7 +225,14 @@
     }
    ],
    "source": [
-    "docs[0]"
+    "docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crea una cadena de procesamiento de lenguaje natural utilizando un LLM local (Ollama) para responder preguntas basadas en un contexto dado"
    ]
   },
   {
@@ -160,12 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain_ollama.chat_models import ChatOllama\n",
-    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
-    "\n",
-    "# Prompt\n",
+    "# Prompt: Se define una plantilla de pregunta-respuesta que toma un contexto y una pregunta como entrada\n",
     "template = \"\"\"Answer the question based only on the following context:\n",
     "{context}\n",
     "\n",
@@ -173,17 +249,24 @@
     "\"\"\"\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
-    "# Local LLM\n",
+    "# Local LLM: Se configura el modelo llama3.2 para generar respuestas de manera local\n",
     "ollama_llm = \"llama3.2\"\n",
     "model_local = ChatOllama(model=ollama_llm)\n",
     "\n",
-    "# Chain\n",
+    "# Chain Se construye un pipeline que pasa el contexto desde el retriever\n",
     "chain = (\n",
     "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
     "    | prompt\n",
     "    | model_local\n",
     "    | StrOutputParser()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probamos el modelo"
    ]
   },
   {
@@ -304,6 +387,13 @@
    ],
    "source": [
     "chain.invoke(\"Que relación tiene la mafia en sus películas?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En conclusión, el modelo responde de manera efectiva a las preguntas sobre los PDFs, proporcionando respuestas relevantes y coherentes basadas en el contexto extraído de los documentos. La integración del recuperador de vectores y el modelo LLM local permite una comprensión precisa de las consultas, demostrando su capacidad para manejar información textual de manera eficiente."
    ]
   }
  ],
