--- a/RAG-web.ipynb
+++ b/RAG-web.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importamos librerías necesarias"
+    "## RAG-WEB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este cuaderno procesa documentos PDF, extrayendo y dividiendo su contenido en fragmentos de texto. Luego, los almacena en una base de datos de vectores para facilitar la búsqueda. Utilizando el modelo **Llama 3.2**, el sistema responde a preguntas sobre los PDFs, generando respuestas precisas basadas en la información almacenada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa las librerías necesarias"
    ]
   },
   {
@@ -28,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extraemos el contenido de la página web y la dividimos en chunks"
+    "Extrae el contenido de la página web y la dividimos "
    ]
   },
   {
@@ -84,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instanciamos los embeddings"
+    "Configura un modelo de Hugging Face para generar embeddings de texto."
    ]
   },
   {
@@ -93,8 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear un vector store de Chroma usando los documentos y el modelo de embeddings\n"
    ]
   },
   {
@@ -111,14 +131,19 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "vector_store = Chroma.from_texts(\n",
     "    texts=web_texts,\n",
     "    collection_name=\"book_review2\",\n",
     "    embedding=embeddings,\n",
     ")\n",
     "print(f\"Se creó el vector store con {len(web_texts)} documentos.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utiliza una función de embeddings para representar los datos"
    ]
   },
   {
@@ -135,12 +160,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convierte el vector store en un retriever  para realizar consultas basadas en similitud de texto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "retriever = vector_store.as_retriever()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pregunta de ejemplo"
    ]
   },
   {
@@ -163,6 +202,13 @@
     "question = \"Tell me about the philosophy of the book\"\n",
     "docs = vector_store.similarity_search(question, k=5)\n",
     "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos los textos más relacionados a la pregunta"
    ]
   },
   {
@@ -190,13 +236,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crea una cadena de procesamiento de lenguaje natural utilizando un LLM local (Ollama) para responder preguntas basadas en un contexto dado"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Prompt\n",
+    "# Prompt: Se define una plantilla de pregunta-respuesta que toma un contexto y una pregunta como entrada\n",
     "template = \"\"\"Answer the question based only on the following context:\n",
     "{context}\n",
     "\n",
@@ -204,17 +256,24 @@
     "\"\"\"\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
-    "# Local LLM\n",
+    "# Local LLM: Se configura el modelo llama3.2 para generar respuestas de manera local\n",
     "ollama_llm = \"llama3.2\"\n",
     "model_local = ChatOllama(model=ollama_llm)\n",
     "\n",
-    "# Chain\n",
+    "# Chain Se construye un pipeline que pasa el contexto desde el retriever\n",
     "chain = (\n",
     "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
     "    | prompt\n",
     "    | model_local\n",
     "    | StrOutputParser()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probamos el modelo"
    ]
   },
   {
@@ -315,6 +374,13 @@
    ],
    "source": [
     "chain.invoke(\"opening line of the book\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El cuaderno es eficaz para obtener y procesar información de sitios web, almacenarla de manera estructurada en una base de datos de vectores y generar respuestas precisas a preguntas mediante el modelo **Llama 3.2**. Este enfoque permite acceder rápidamente a datos relevantes extraídos de la web y proporciona respuestas útiles basadas en esos contenidos."
    ]
   }
  ],
