--- a/RAG-MongoAtlas.ipynb
+++ b/RAG-MongoAtlas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +146,7 @@
    "source": [
     "# Crear los documentos a partir de los fragmentos de texto\n",
     "vector_store.add_documents(all_documents)\n",
-    "print(\"Documents añadidos al vectorstore correctamente\")\n",
-    "print(all_documents)"
+    "print(\"Documents añadidos al vectorstore correctamente\")"
    ]
   },
   {
