--- a/RAG-web.ipynb
+++ b/RAG-web.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain_ollama.chat_models import ChatOllama\n",
-    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n"
+    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough"
    ]
   },
   {
@@ -59,9 +59,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Extrae el texto de la página web y divide cada línea en un fragmento de texto\n",
     "def extract_lines_from_web(url):\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
@@ -91,7 +88,7 @@
     "\n",
     "web_texts = extract_lines_from_web(url)\n",
     "\n",
-    "print(f\"Se cargaron y dividieron {len(web_texts)} fragmentos de texto.\")\n"
+    "print(f\"Se cargaron y dividieron {len(web_texts)} fragmentos de texto.\")"
    ]
   },
   {
