--- a/RAG-web.ipynb
+++ b/RAG-web.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El cuaderno es eficaz para obtener y procesar información de sitios web, almacenarla de manera estructurada en una base de datos de vectores y generar respuestas precisas a preguntas mediante el modelo **Llama 3.2**. Este enfoque permite acceder rápidamente a datos relevantes extraídos de la web y proporciona respuestas útiles basadas en esos contenidos."
+    "En conclusión, el cuaderno es eficaz para obtener y procesar información de sitios web, almacenarla de manera estructurada en una base de datos de vectores y generar respuestas precisas a preguntas mediante el modelo **Llama 3.2**. Este enfoque permite acceder rápidamente a datos relevantes extraídos de la web y proporciona respuestas útiles basadas en esos contenidos."
    ]
   }
  ],
