--- a/RAG-MongoAtlas.ipynb
+++ b/RAG-MongoAtlas.ipynb
@@ -131,21 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Documents añadidos al vectorstore correctamente\n"
+      "Documentos añadidos al vector store correctamente\n"
      ]
     }
    ],
    "source": [
     "# Crear los documentos a partir de los fragmentos de texto\n",
     "vector_store.add_documents(all_documents)\n",
-    "print(\"Documentos añadidos al vectorstore correctamente\")"
+    "print(\"Documentos añadidos al vector store correctamente\")"
    ]
   },
   {
