removed credentials in URI for Mongo Atlas

--- a/RAG-MongoAtlas.ipynb
+++ b/RAG-MongoAtlas.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = MongoClient(\"mongodb+srv://admin:admin@rag.tmi5z.mongodb.net/?retryWrites=true&w=majority&appName=RAG\")\n",
+    "client = MongoClient(\"mongodb+srv://username:password@mycluster.xxxxx.mongodb.net/?\")\n",
     "database = 'rag_db'\n",
     "collection = client[\"rag_db\"][\"rag_collec\"]\n",
     "ATLAS_VECTOR_SEARCH_INDEX_NAME='index'"
