--- a/RAG-MongoAtlas.ipynb
+++ b/RAG-MongoAtlas.ipynb
@@ -33,16 +33,14 @@
     "from langchain_mongodb import MongoDBAtlasVectorSearch\n",
     "from langchain.docstore.document import Document\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "from langchain_ollama.llms import OllamaLLM\n",
     "from langchain.chains import RetrievalQA\n",
     "from pymongo import MongoClient\n",
-    "from langchain_mongodb import MongoDBAtlasVectorSearch\n",
     "from pymongo.errors import OperationFailure\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain_ollama.chat_models import ChatOllama\n",
     "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
-    "from langchain_core.output_parsers import StrOutputParser\n"
+    "from langchain_core.output_parsers import StrOutputParser"
    ]
   },
   {
